Notes/MSys2 make error.txt
Making all in ConsoleRunner
make[3]: Entering directory '/home/stahta01/devel/codeblocks_msys2-git/src/tools/ConsoleRunner'
depbase=`echo main.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
x86_64-w64-mingw32-g++ -DHAVE_CONFIG_H -I. -I../../../src/include   -D_POSIX -DHAVE_TR1_TYPE_TRAITS -DcbDEBUG -DNOPCH -DHAVE_W32API_H -D_WIN64 -DTIXML_USE_STL  -O2 -ffast-math -DCB_AUTOCONF -Wno-deprecated-declarations -fmessage-length=0  -DPIC -fexceptions -MT main.o -MD -MP -MF $depbase.Tpo -c -o main.o main.cpp &&\
mv -f $depbase.Tpo $depbase.Po
main.cpp: In function 'int execute_command(char*)':
main.cpp:74:21: error: 'WIFEXITED' was not declared in this scope
     if(WIFEXITED(ret))
                     ^
main.cpp:76:31: error: 'WEXITSTATUS' was not declared in this scope
         return WEXITSTATUS(ret);
                               ^
Makefile:465: recipe for target 'main.o' failed
make[3]: *** [main.o] Error 1
make[3]: Leaving directory '/home/stahta01/devel/codeblocks_msys2-git/src/tools/ConsoleRunner'
